<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ma_toolbar_menu_framelayout"
    android:layout_width="150dp"
    android:layout_height="160dp"
    android:background="@color/white"
    android:padding="5dp"
    android:layout_marginTop="65dp"
    android:layout_marginEnd="5dp"
    android:layout_alignParentEnd="true"
    tools:showIn="@layout/activity_main"
    android:alpha="0"
    android:visibility="gone">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ma_menu_findfriends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:text="@string/find_friends"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/ma_menu_createGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:text="@string/create_group"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/ma_menu_Profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:text="@string/profile"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ma_menu_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:text="@string/logout"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>