<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:timer="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:id="@+id/complete_camera_layout">

    <com.nsromapa.uchat.cameraUtils.AutoFitTextureView
        android:id="@+id/texture"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp" />




    <ImageView
        android:id="@+id/frag_camera_capture_btn"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:src="@drawable/camera_ring"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:contentDescription="@string/capture_image_video" />

    <ImageView
        android:id="@+id/camera_rotate"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_switch_camera_24dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="70dp"
        android:contentDescription="@string/rotate_camera" />


    <ImageView
        android:id="@+id/camera_flash"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_flash_on"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="70dp"
        android:layout_marginStart="72dp"
        android:contentDescription="@string/toggle_flash" />



    <LinearLayout
        android:id="@+id/ll_video_timer"
        android:gravity="center"
        android:padding="3dp"
        android:paddingStart="3dp"
        android:paddingEnd="5dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:alpha="0.6"
        android:background="@drawable/btn_rounded_gray"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="140dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <io.github.krtkush.lineartimer.LinearTimerView
            android:id="@+id/linearTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            timer:radius="2dp"
            timer:strokeWidth="1dp"
            timer:initialColor="@color/white"
            timer:progressColor="@color/pure_red" />

        <TextView
            android:id="@+id/time"
            android:layout_marginStart="5dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>



</RelativeLayout>
