<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseReceiverActivity"
    android:background="@drawable/tab_background_gradient">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="85dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp">


        <LinearLayout
            android:id="@+id/full_newsfeed_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/select_story_or_feed_background"
            android:padding="7sp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_library_add_black_24dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/conent" />


            <TextView
                android:id="@+id/newfeed_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="7dp"
                android:text="@string/add_to_post_board"
                android:textColor="@android:color/black"
                android:textSize="13sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/add_to_newsfeed"
                android:layout_width="10dp"
                android:layout_height="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/full_campus_market_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/select_story_or_feed_background"
            android:padding="7sp"
            android:layout_marginStart="7dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_add_shopping_cart_black_24dp"
                android:contentDescription="@string/conent" />


            <TextView
                android:id="@+id/campus_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/campus_market"
                android:textColor="@android:color/black"
                android:textSize="13sp"
                android:layout_marginStart="7dp"
                android:layout_gravity="center_vertical"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/add_to_campus_marcket"
                android:layout_width="10dp"
                android:layout_height="10dp" />
        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/full_story_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/select_story_or_feed_background"
        android:padding="7sp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginTop="138dp">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_group_work_24dp"/>


        <TextView
            android:id="@+id/story_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_a_story"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginStart="7dp"
            android:layout_gravity="center_vertical"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/story"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:visibility="invisible"/>
    </LinearLayout>




    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="195dp"
        android:padding="12dp"
        android:background="@drawable/card_background">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_send_message_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="48dp" />

        <ProgressBar
            android:id="@+id/a_choose_receiver_progressBar"
            android:layout_gravity="center_horizontal"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>




    <include layout="@layout/toolbar_search_only_users"/>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16sp"
        android:src="@android:drawable/ic_media_play" />
</FrameLayout>
